# compare-models

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/commands/: compare-models.md  model-eval.md
data/: artificial_analysis.json  model_aliases.json
docs/superpowers/specs/: 2026-05-02-distribution-context-design.md
scripts/: scrape_aa.py
src/compare_models/: __main__.py  aa_client.py  arena_client.py  cli.py  models.py  renderer.py  resolver.py
src/compare_models/sources/: __init__.py  arena.py  artificial_analysis.py
src/compare_models/templates/: comparison.md.j2
src/model_eval/: __main__.py  aa_client.py  arena_client.py  charts.py  cli.py  models.py  renderer.py  tiers.py
src/model_eval/sources/: __init__.py  arena.py  artificial_analysis.py
src/model_eval/templates/: comparison.md.j2  macros.j2
tests/: conftest.py  test_aa.py  test_aa_client.py  test_arena.py  test_arena_client.py  test_charts.py  test_cli.py  test_renderer.py  test_resolver.py  test_tiers.py
