[project]
name = "model-eval"
version = "0.1.0"
description = "CLI tool for evaluating and comparing LLM models using multiple evaluation data sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "datasets>=3.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

[project.scripts]
model-eval = "model_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__", "dist", "build"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["model_eval"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no network)",
    "integration: Integration tests (requires network)",
]
